shift display of bundle purchases depending on number of issues, handles bundles of all issues

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -99,3 +99,11 @@ body {
   word-wrap: break-word;
   white-space: normal;
 }
+
+.btn-bundle-right {
+  margin: 10px 10px 20px 10px;
+  padding: 10px;
+  max-width: 500px;
+  word-wrap: break-word;
+  white-space: normal;
+}
